# NumworksAppsRust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  justfile  setup.sh
.cargo/: config.toml
src/: lib.rs  main.rs
src/eadk/: adresses.rs  backlight.rs  display.rs  keyboard.rs  macros.rs  mod.rs  panic_handler.rs  random.rs  time.rs  utils.rs
src/eadk/storage/: mod.rs  storage.c  storage.h
